--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,13 @@
 
 
 .card{
-    @apply bg-white rounded overflow-hidden shadow-md relative
+    @apply bg-white rounded overflow-hidden shadow-md relative hover:shadow-xl
 }
 
 .badge{
     @apply bg-gray-100 text-xs rounded-full p-1 absolute top-0 m-2
+}
+
+.btn {
+    @apply  rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
 }
